add displaying raspberry and rs485-usb

--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
             <div class="arduino-nano">arduino</div>
             <div class="rs485-ttl">rs485</div>
         </div>
+
+        <div class="raspberry-rs485-block">
+            <div class="rasspberry">raspberry</div>
+            <div class="rs485-usb">rs485</div>
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
