--- a/index.html
+++ b/index.html
@@ -61,10 +61,14 @@
             <div class="arduino-nano">arduino</div>
             <div class="rs485-ttl">rs485</div>
         </div>
-
         <div class="raspberry-rs485-block">
             <div class="rasspberry">raspberry</div>
             <div class="rs485-usb">rs485</div>
+        </div>
+
+        <div class="wifi-ds18b20-block">
+            <div class="wifi">wifi</div>
+            <div class="ds18b20">ds18b20</div>
         </div>
     </div>
 
