add global amperage and voltage sensors

--- a/index.html
+++ b/index.html
@@ -62,13 +62,24 @@
             <div class="rs485-ttl">rs485</div>
         </div>
         <div class="raspberry-rs485-block">
-            <div class="rasspberry">raspberry</div>
+            <div class="raspberry">raspberry</div>
             <div class="rs485-usb">rs485</div>
         </div>
 
         <div class="wifi-ds18b20-block">
             <div class="wifi">wifi</div>
             <div class="ds18b20">ds18b20</div>
+        </div>
+
+        <div class="solar-panel-a-v-module">
+            <div class="solar-panel">solar panel</div>
+            <div class="solar-panel-voltage">voltage</div>
+            <div class="solar-panel-amperage">amperage</div>
+        </div>
+
+        <div class="global-a-v-block">
+            <div class="global-amperage">amperage</div>
+            <div class="global-voltage">voltage</div>
         </div>
     </div>
 
