--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
             <div class="global-amperage">amperage</div>
             <div class="global-voltage">voltage</div>
         </div>
+
+        <div class="reley">reley</div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
