add main door and servo

--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
         </div>
 
         <div class="reley">reley</div>
+        
+        <div class="main-door-servo-block">
+            <div class="sg90-servo">sg90</div>
+            <div class="main-door">main door</div>
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
