--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@
             <div class="sg90-servo">sg90</div>
             <div class="main-door">main door</div>
         </div>
+        <div class="garage-input-block">
+            <div class="garage-door">garage door</div>
+            <div class="sg90-servo">sg90</div>
+            <div class="laser-receiver">laser r</div>
+            <div class="laser">laser</div>
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
