--- a/index.html
+++ b/index.html
@@ -28,71 +28,79 @@
             </div>
         </div>
     </div>
-    <div class="main">
-        <div class="arduino-nano-rs485-block arduino-nano-rs485-block-1">
-            <div class="arduino-nano">arduino</div>
-            <div class="rs485-ttl">rs485</div>
-        </div>
-        <div class="arduino-nano-rs485-block arduino-nano-rs485-block-2">
-            <div class="arduino-nano">arduino</div>
-            <div class="rs485-ttl">rs485</div>
-        </div>
-        <div class="arduino-nano-rs485-block arduino-nano-rs485-block-3">
-            <div class="arduino-nano">arduino</div>
-            <div class="rs485-ttl">rs485</div>
-        </div>
-        <div class="arduino-nano-rs485-block arduino-nano-rs485-block-4">
-            <div class="arduino-nano">arduino</div>
-            <div class="rs485-ttl">rs485</div>
-        </div>
-        <div class="arduino-nano-rs485-block arduino-nano-rs485-block-5">
-            <div class="arduino-nano">arduino</div>
-            <div class="rs485-ttl">rs485</div>
-        </div>
-        <div class="arduino-nano-rs485-block arduino-nano-rs485-block-6">
-            <div class="arduino-nano">arduino</div>
-            <div class="rs485-ttl">rs485</div>
-        </div>
-        <div class="arduino-nano-rs485-block arduino-nano-rs485-block-7">
-            <div class="arduino-nano">arduino</div>
-            <div class="rs485-ttl">rs485</div>
-        </div>
-        <div class="arduino-nano-rs485-block arduino-nano-rs485-block-8">
-            <div class="arduino-nano">arduino</div>
-            <div class="rs485-ttl">rs485</div>
-        </div>
-        <div class="raspberry-rs485-block">
-            <div class="raspberry">raspberry</div>
-            <div class="rs485-usb">rs485</div>
-        </div>
+    <div class="container">
 
-        <div class="wifi-ds18b20-block">
-            <div class="wifi">wifi</div>
-            <div class="ds18b20">ds18b20</div>
-        </div>
 
-        <div class="solar-panel-a-v-module">
-            <div class="solar-panel">solar panel</div>
-            <div class="solar-panel-voltage">voltage</div>
-            <div class="solar-panel-amperage">amperage</div>
-        </div>
+        <div class="main">
+            <div class="arduino-nano-rs485-block arduino-nano-rs485-block-1">
+                <div class="arduino-nano">arduino</div>
+                <div class="rs485-ttl">rs485</div>
+            </div>
+            <div class="arduino-nano-rs485-block arduino-nano-rs485-block-2">
+                <div class="arduino-nano">arduino</div>
+                <div class="rs485-ttl">rs485</div>
+            </div>
+            <div class="arduino-nano-rs485-block arduino-nano-rs485-block-3">
+                <div class="arduino-nano">arduino</div>
+                <div class="rs485-ttl">rs485</div>
+            </div>
+            <div class="arduino-nano-rs485-block arduino-nano-rs485-block-4">
+                <div class="arduino-nano">arduino</div>
+                <div class="rs485-ttl">rs485</div>
+            </div>
+            <div class="arduino-nano-rs485-block arduino-nano-rs485-block-5">
+                <div class="arduino-nano">arduino</div>
+                <div class="rs485-ttl">rs485</div>
+            </div>
+            <div class="arduino-nano-rs485-block arduino-nano-rs485-block-6">
+                <div class="arduino-nano">arduino</div>
+                <div class="rs485-ttl">rs485</div>
+            </div>
+            <div class="arduino-nano-rs485-block arduino-nano-rs485-block-7">
+                <div class="arduino-nano">arduino</div>
+                <div class="rs485-ttl">rs485</div>
+            </div>
+            <div class="arduino-nano-rs485-block arduino-nano-rs485-block-8">
+                <div class="arduino-nano">arduino</div>
+                <div class="rs485-ttl">rs485</div>
+            </div>
+            <div class="raspberry-rs485-block">
+                <div class="raspberry">raspberry</div>
+                <div class="rs485-usb">rs485</div>
+            </div>
 
-        <div class="global-a-v-block">
-            <div class="global-amperage">amperage</div>
-            <div class="global-voltage">voltage</div>
-        </div>
+            <div class="wifi-ds18b20-block">
+                <div class="wifi">wifi</div>
+                <div class="ds18b20">ds18b20</div>
+            </div>
 
-        <div class="reley">reley</div>
-        
-        <div class="main-door-servo-block">
-            <div class="sg90-servo">sg90</div>
-            <div class="main-door">main door</div>
-        </div>
-        <div class="garage-input-block">
-            <div class="garage-door">garage door</div>
-            <div class="sg90-servo">sg90</div>
-            <div class="laser-receiver">laser r</div>
-            <div class="laser">laser</div>
+            <div class="solar-panel-a-v-module">
+                <div class="solar-panel">solar panel</div>
+                <div class="solar-panel-voltage">voltage</div>
+                <div class="solar-panel-amperage">amperage</div>
+            </div>
+
+            <div class="global-a-v-block">
+                <div class="global-amperage">amperage</div>
+                <div class="global-voltage">voltage</div>
+            </div>
+
+            <div class="reley">reley</div>
+
+            <div class="main-door-servo-block">
+                <div class="sg90-servo">sg90</div>
+                <div class="main-door">main door</div>
+            </div>
+            <div class="garage-input-block">
+                <div>
+                    <div class="laser">laser</div>
+                    <div class="laser-receiver">laserr</div>
+                </div>
+                <div class="garage-door-block">
+                    <div class="garage-door">garage door</div>
+                    <div class="sg90-servo">sg90</div>
+                </div>
+            </div>
         </div>
     </div>
 
