--- a/index.html
+++ b/index.html
@@ -29,8 +29,6 @@
         </div>
     </div>
     <div class="container">
-
-
         <div class="main">
             <div class="arduino-nano-rs485-block arduino-nano-rs485-block-1">
                 <div class="arduino-nano">arduino</div>
@@ -101,6 +99,9 @@
                     <div class="sg90-servo">sg90</div>
                 </div>
             </div>
+
+            <div class="window window-first">wind</div>
+            <div class="window window-second">wind</div>
         </div>
     </div>
 
