add window with pir and servo

--- a/index.html
+++ b/index.html
@@ -100,8 +100,17 @@
                 </div>
             </div>
 
-            <div class="window window-first">wind</div>
+            <div class="mg135-air">mg135</div>
+            
+            <div class="window-servo-pir-block">
+                <div class="pir">pir</div>
+                <div class="window">wind</div>
+                <div class="sg90-servo">s90</div>
+            </div>
+            
             <div class="window window-second">wind</div>
+
+
         </div>
     </div>
 
