add servo and rfid blok

--- a/index.html
+++ b/index.html
@@ -110,7 +110,10 @@
             
             <div class="window window-second">wind</div>
 
-
+            <div class="servo-rfid-block">
+                <div class="rfid-rc522">rfid</div>
+                <div class="sg90-servo">sg90</div>
+            </div>
         </div>
     </div>
 
