add door pir servo

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
             <div class="main-door-servo-block">
                 <div class="sg90-servo">sg90</div>
-                <div class="main-door">main door</div>
+                <div class="door main-door">main door</div>
             </div>
             <div class="garage-input-block">
                 <div>
@@ -95,7 +95,7 @@
                     <div class="laser-receiver">laserr</div>
                 </div>
                 <div class="garage-door-block">
-                    <div class="garage-door">garage door</div>
+                    <div class="door garage-door">garage door</div>
                     <div class="sg90-servo">sg90</div>
                 </div>
             </div>
@@ -113,6 +113,12 @@
             <div class="servo-rfid-block">
                 <div class="rfid-rc522">rfid</div>
                 <div class="sg90-servo">sg90</div>
+            </div>
+
+            <div class="door-s90-pir2">
+                <div class="door">door</div>
+                <div class="pir">pir</div>
+                <div class="sg90-servo">s90</div>
             </div>
         </div>
     </div>
