update air ventilation

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
             <div class="main-door-servo-block">
                 <div class="sg90-servo">sg90</div>
-                <div class="door main-door">main door</div>
+                <div class="door">main door</div>
             </div>
             <div class="garage-input-block">
                 <div>
@@ -115,10 +115,19 @@
                 <div class="sg90-servo">sg90</div>
             </div>
 
-            <div class="door-s90-pir2">
+            <div class="door-s90-pir2-block">
                 <div class="door">door</div>
                 <div class="pir">pir</div>
                 <div class="sg90-servo">s90</div>
+            </div>
+
+            <div class="ventilation-block">
+                <div class="air-pipe air-pipe-1">air</div>
+                <div class="air-pipe air-pipe-2">air</div>
+                <div class="air-pipe air-pipe-3">air</div>
+                <div class="air-pipe air-pipe-4">air</div>
+                
+                <div class="dht22">dht22</div>
             </div>
         </div>
     </div>
