--- a/index.html
+++ b/index.html
@@ -12,18 +12,22 @@
 </head>
 
 <body>
-    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
-        aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal fade" id="modalWindow" tabindex="-1" role="dialog"
+        aria-labelledby="modalWindowTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalCenterTitle">Block description</h5>
+                    <h5 class="modal-title" id="modalWindowTitle">Block description</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
-                    test text
+                    <div id="img-description">
+                        <img src="" alt="">
+                    </div>
+                    <div id="text-description">
+                    </div>
                 </div>
             </div>
         </div>
