--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
             <div class="door"></div>
         </div>
         <div class="garage-input-block">
-            <div class="laser"></div>
-            <div class="laser-receiver"></div>
+            <!-- <div class="laser"></div> -->
+            <!-- <div class="laser-receiver"></div> -->
             <div class="door garage-door"></div>
             <div class="sg90-servo"></div>
         </div>
@@ -125,7 +125,7 @@
             <div class="air-pipe air-pipe-1"></div>
             <div class="air-pipe air-pipe-2"></div>
             <div class="air-pipe air-pipe-3"></div>
-            <div class="air-pipe air-pipe-4"></div>
+            <!-- <div class="air-pipe air-pipe-4"></div> -->
             
             <div class="dht22"></div>
             <div class="peltye"></div>
@@ -139,6 +139,8 @@
             <div class="light-sensor light-sensor-1"></div>
             <div class="light-sensor light-sensor-2"></div>
         </div>
+
+        <div class="flower"></div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
