--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
         </div>
 
         <div class="ventilation-block">
-            <div class="air-pipe air-pipe-1"></div>
+            <div class="ventilation-recuperaptor"></div>
+            <!-- <div class="air-pipe air-pipe-1"></div> -->
             <div class="air-pipe air-pipe-2"></div>
             <div class="air-pipe air-pipe-3"></div>
             <!-- <div class="air-pipe air-pipe-4"></div> -->
