add language changing

--- a/index.html
+++ b/index.html
@@ -142,6 +142,11 @@
         </div>
 
         <div class="flower"></div>
+
+        <div class="language-block">
+            <div class="en-lang"></div>
+            <div class="ua-lang"></div>
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
