add humidity sensor

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
           <div class="door"></div>
         </div>
         <div class="garage-input-block">
-          <!-- <div class="laser"></div> -->
-          <!-- <div class="laser-receiver"></div> -->
+          <div class="laser"></div>
+          <div class="laser-receiver"></div>
           <div class="door garage-door"></div>
           <div class="sg90-servo"></div>
         </div>
@@ -156,6 +156,7 @@
         </div>
 
         <div class="flower"></div>
+        <div class="flower-humidity"></div>
 
         <div class="language-block">
           <div class="en-lang"></div>
