add buttons to mark experiments groups

--- a/index.html
+++ b/index.html
@@ -49,36 +49,36 @@
       </div>
       <div class="schema-block">
         <div class="arduino-nano-rs485-block arduino-nano-rs485-block-1">
-          <div class="arduino-nano"></div>
-          <div class="rs485-ttl"></div>
+          <div class="arduino-nano" solar-station></div>
+          <div class="rs485-ttl" solar-station></div>
         </div>
         <div class="arduino-nano-rs485-block arduino-nano-rs485-block-2">
-          <div class="arduino-nano"></div>
-          <div class="rs485-ttl"></div>
+          <div class="arduino-nano" illumination-control></div>
+          <div class="rs485-ttl" illumination-control></div>
         </div>
         <div class="arduino-nano-rs485-block arduino-nano-rs485-block-3">
-          <div class="arduino-nano"></div>
-          <div class="rs485-ttl"></div>
+          <div class="arduino-nano" climate-control cyber-security></div>
+          <div class="rs485-ttl" climate-control cyber-security></div>
         </div>
         <div class="arduino-nano-rs485-block arduino-nano-rs485-block-4">
-          <div class="arduino-nano"></div>
-          <div class="rs485-ttl"></div>
+          <div class="arduino-nano" safety-control presence-control></div>
+          <div class="rs485-ttl" safety-control presence-control></div>
         </div>
         <div class="arduino-nano-rs485-block arduino-nano-rs485-block-5">
-          <div class="arduino-nano"></div>
-          <div class="rs485-ttl"></div>
+          <div class="arduino-nano" zone-control></div>
+          <div class="rs485-ttl" zone-control></div>
         </div>
         <div class="arduino-nano-rs485-block arduino-nano-rs485-block-6">
-          <div class="arduino-nano"></div>
-          <div class="rs485-ttl"></div>
+          <div class="arduino-nano" ventilation></div>
+          <div class="rs485-ttl" ventilation></div>
         </div>
         <div class="arduino-nano-rs485-block arduino-nano-rs485-block-7">
-          <div class="arduino-nano"></div>
-          <div class="rs485-ttl"></div>
+          <div class="arduino-nano" lightning-control></div>
+          <div class="rs485-ttl" lightning-control></div>
         </div>
         <div class="arduino-nano-rs485-block arduino-nano-rs485-block-8">
-          <div class="arduino-nano"></div>
-          <div class="rs485-ttl"></div>
+          <div class="arduino-nano" access-control></div>
+          <div class="rs485-ttl" access-control></div>
         </div>
         <div class="raspberry-rs485-block">
           <div class="raspberry"></div>
@@ -86,15 +86,15 @@
         </div>
 
         <div class="wifi-ds18b20-block">
-          <div class="wifi"></div>
-          <div class="ds18b20"></div>
+          <div class="wifi" cyber-security></div>
+          <div class="ds18b20" cyber-security></div>
         </div>
 
         <div class="solar-panel-a-v-module">
-          <div class="solar-panel"></div>
-          <div class="solar-panel-voltage"></div>
-          <div class="solar-panel-amperage"></div>
-          <div class="sun-light"></div>
+          <div class="solar-panel" solar-station></div>
+          <div class="solar-panel-voltage" solar-station></div>
+          <div class="solar-panel-amperage" solar-station></div>
+          <div class="sun-light" solar-station lightning-control></div>
         </div>
 
         <div class="global-a-v-block">
@@ -109,54 +109,54 @@
           <div class="door"></div>
         </div>
         <div class="garage-input-block">
-          <div class="laser"></div>
-          <div class="laser-receiver"></div>
-          <div class="door garage-door"></div>
-          <div class="sg90-servo"></div>
+          <div class="laser" zone-control></div>
+          <div class="laser-receiver" zone-control></div>
+          <div class="door garage-door" zone-control></div>
+          <div class="sg90-servo" zone-control></div>
         </div>
 
         <div class="mg135-air"></div>
 
         <div class="window-servo-pir-block">
-          <div class="pir"></div>
-          <div class="window"></div>
-          <div class="sg90-servo"></div>
+          <div class="pir" safety-control></div>
+          <div class="window" safety-control></div>
+          <div class="sg90-servo" safety-control></div>
         </div>
 
         <div class="window window-second"></div>
 
         <div class="servo-rfid-block">
-          <div class="rfid-rc522"></div>
-          <div class="sg90-servo"></div>
+          <div class="rfid-rc522" access-control></div>
+          <div class="sg90-servo" access-control></div>
         </div>
 
         <div class="door-s90-pir2-block">
-          <div class="door"></div>
-          <div class="pir"></div>
-          <div class="sg90-servo"></div>
+          <div class="door" presence-control></div>
+          <div class="pir" presence-control></div>
+          <div class="sg90-servo" presence-control></div>
         </div>
 
         <div class="ventilation-block">
-          <div class="ventilation-recuperaptor"></div>
+          <div class="ventilation-recuperaptor" ventilation></div>
           <!-- <div class="air-pipe air-pipe-1"></div> -->
-          <div class="air-pipe air-pipe-2"></div>
-          <div class="air-pipe air-pipe-3"></div>
+          <div class="air-pipe air-pipe-2" ventilation></div>
+          <div class="air-pipe air-pipe-3" ventilation></div>
           <!-- <div class="air-pipe air-pipe-4"></div> -->
 
-          <div class="dht22"></div>
-          <div class="peltye"></div>
-          <div class="dht11 dht11-1"></div>
-          <div class="dht11 dht11-2"></div>
+          <div class="dht22" climate-control ventilation></div>
+          <div class="peltye" ventilation></div>
+          <div class="dht11 dht11-1" climate-control></div>
+          <div class="dht11 dht11-2" climate-control></div>
         </div>
 
         <div class="lights-block">
-          <div class="white-led-strip"></div>
-          <div class="rgb-led-strip"></div>
-          <div class="light-sensor light-sensor-1"></div>
-          <div class="light-sensor light-sensor-2"></div>
+          <div class="white-led-strip" lightning-control></div>
+          <div class="rgb-led-strip" illumination-control></div>
+          <div class="light-sensor light-sensor-1" lightning-control></div>
+          <div class="light-sensor light-sensor-2" lightning-control></div>
         </div>
         <div class="flower"></div>
-        <div class="flower-humidity"></div>
+        <div class="flower-humidity" climate-control></div>
       </div>
 
       <div class="schema-buttons">
