--- a/index.html
+++ b/index.html
@@ -160,31 +160,40 @@
       </div>
 
       <div class="schema-buttons">
-        <button class="schema-button" id="solar-station">Solar station</button>
-        <button class="schema-button" id="illumination-control">
+        <button class="schema-button btn btn-primary" id="solar-station">
+          Solar station
+        </button>
+        <button class="schema-button btn btn-primary" id="illumination-control">
           Illuminatipon control
         </button>
-        <button class="schema-button" id="climate-control">
+        <button class="schema-button btn btn-primary" id="climate-control">
           Climate control
         </button>
-        <button class="schema-button" id="access-control">
+        <button class="schema-button btn btn-primary" id="access-control">
           Access control
         </button>
-        <button class="schema-button" id="safety-control">
+
+        <button class="schema-button btn btn-primary" id="safety-control">
           Safety control
         </button>
-        <button class="schema-button" id="zone-control">Zone control</button>
-        <button class="schema-button" id="presence-control">
+        <button class="schema-button btn btn-primary" id="zone-control">
+          Zone control
+        </button>
+        <button class="schema-button btn btn-primary" id="presence-control">
           Presence control
         </button>
-        <button class="schema-button" id="ventilation">Ventilation</button>
-        <button class="schema-button" id="lightning-control">
+        <button class="schema-button btn btn-primary" id="ventilation">
+          Ventilation
+        </button>
+
+        <button class="schema-button btn btn-primary" id="lightning-control">
           Lightning control
         </button>
-        <button class="schema-button" id="cyber-security">
+        <button class="schema-button btn btn-primary" id="cyber-security">
           Cyber-security
         </button>
       </div>
+
       <!--End of schema-->
     </div>
 
